<resources>
    <string name="app_name">Team Management App</string>
    <string name="add_player">Add Player</string>
    <string name="settings">Settings:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="players">Players</string>
    <string name="player_name">Player Name</string>
    <string name="player_number">Player Number</string>
    <string name="player_position">Player Position</string>
    <string name="player_age">Player Age</string>
    <string name="team_name">Team Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="save">Save</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to leave without saving?</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="delete_player_title">Delete Player</string>
    <string name="delete_player_message">Are you sure you want to delete this player?</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="team_contact_required">Team contact required</string>
    <string name="team_name_required">Team name is required</string>
    <string name="team_name_unique">Team name must be unique.</string>
    <string name="team_name_capital">Team name must start with a capital letter</string>
    <string name="team_name_length">Team name must be at most 15 characters long.</string>
    <string name="team_logo_required">Team logo is required</string>
    <string name="player_required">At least one player is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="all_fields_required">All fields must be filled out.</string>
    <string name="name_only_letters">Name can only contain letters.</string>
    <string name="player_name_capital">Player name must start with a capital letter</string>
    <string name="name_length">Name cannot be longer than 20 characters.</string>
    <string name="number_range">Number must be between 1 and 99.</string>
    <string name="number_unique">Player number must be unique.</string>
    <string name="position_length">Position must be exactly 2 letters.</string>
    <string name="age_range">Age must be between 0 and 99.</string>
    <string name="english">English</string>
    <string name="hebrew">עברית</string>
    <string name="change_language">Change Language</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="background_color">Background color</string>
    <string name="team_logo">Team_logo</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contact_selected">No contact selected</string>
        <string-array name="text_Size_Spinner">
            <item>Select Text Size</item>
            <item>Small</item>
            <item>Medium</item>
            <item>Large</item>
        </string-array>
        <string-array name="background_Color_Spinner">
            <item>Select Background</item>
            <item>Black</item>
            <item>Green</item>
            <item>Yellow</item>
            <item>Red</item>
            <item>Purple</item>
        </string-array>
</resources>