<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/players"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tableLayoutPlayers"
        app:layout_constraintVertical_bias="0.5" />

    <TableLayout
        android:id="@+id/tableLayoutPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:paddingStart="8dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/position"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
