<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditTeamFragment"
    android:layoutDirection="ltr"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSaveTeam">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="480dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTeamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_name"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSelectPhoto"
                style="?attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/select_photo" />

            <ImageView
                android:id="@+id/imageViewTeamLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:contentDescription="@string/team_logo"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/buttonAddTeamContact"
                style="?attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/add_contact" />

            <!-- New TextView for displaying contact number -->
            <TextView
                android:id="@+id/textViewTeamContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_border"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="480dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTeamEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_your_e_mail"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:paddingTop="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:nestedScrollingEnabled="false"/>
            <Button
                android:id="@+id/buttonAddPlayer"
                style="?attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_player"
                android:layout_marginTop="8dp"
                android:layout_gravity="start" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSaveTeam"
        style="?attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
